public/boss/styles.css
/* ... */
/* Allow element to scroll vertically. */
.scrollable {
  overflow-y: auto;
}

/* Place border around element */
.bordered {
  border: 1px solid #000;
}

/** List of items **/

ul.flat-list li {
  display: inline-block;
}

ul.flat-list,
ul.simple-list {
  padding-left: 0px;
  list-style: none;
}

ul.flat-list {
  margin-bottom: 10px;
}
ul.flat-list,
ul.simple-list.add-more-margin {
  margin-bottom: 20px;
}

ul.flat-list,
ul.simple-list li {
  font-family: "ChicagoFLF";
  font-size: 12px;
}

ul.flat-list,
ul.simple-list li:last-child {
}

ul.flat-list,
ul.simple-list li::before {
  content: '';
}

/** Basic Text Styles **/

div.text {
  display: flex;
}
div.text p, div.text span {
  font-family: "Geneva";
  font-size: 14px;
}

div.text b, div.text strong {
  font-family: "ChicagoFLF";
  font-size: 14px;
}
div.text.large b {
  font-size: 18px;
}
div.text.align-center {
  justify-content: center;
  align-items: center;
}
div.text.align-left {
  justify-content: flex-start;
  align-items: flex-start;
}

/** Form Fields **/

/* A read-only label field */
div.read-only label {
  font-family: "ChicagoFLF";
  font-size: 14px;
  display: inline-block;
  /* Should match the .ui-popup-menu label width */
  width: 90px;
}
div.read-only label.wider {
  width: 120px;
}

/* The `span` inside `div.read-only` is the value for the field name */
div.read-only span {
  font-family: "Geneva";
  font-size: 14px;
}

/* Displays a statistic where the label is on the bottom, the stat on the top. */
div.statistic {
  display: flex;
  flex-direction: column;
  gap: 5px;
  align-items: center;
}

div.statistic label {
  font-family: "ChicagoFLF";
  font-size: 14px;
  display: inline-block;
}

div.statistic span {
  font-family: "Geneva";
  font-size: 28px;
}

label {
  font-family: "ChicagoFLF";
  font-size: 14px;
}

.text-field label {
  display: block;
}
.textarea-field label {
  display: block;
}

.checkbox-field label { }
.radio-field { }

/** List Box **/

.ui-list-box select {
  display: none;
}
.ui-list-box {
  /**
   * The list box will conform to the size of its parent container.
   */
  flex: 1;
  border: 1px solid #000;
  font-family: "ChicagoFLF";
  font-size: 14px;
  padding: 2px;
  background-color: #fff;
}
.ui-list-box > .container {
  display: flex;
  flex-direction: column;
  overflow-x: hidden;
  overflow-y: auto;
}

.ui-list-box > .container > .option {
  padding-left: 2px;
  color: #000;
  background-color: #fff;
  height: 18px;
  white-space: nowrap;
  text-overflow: ellipsis;
  cursor: pointer;
}
/* When icons are displayed, there needs to be enough space on the left to support
 * them. */

.ui-list-box > .container > .option.selected {
  color: #fff;
  background-color: #000;
}
.ui-list-box > .container > .option.selected > img {
  filter: invert(100%);
}
.ui-list-box > .container > .option.disabled {
  color: #ddd;
}

.ui-list-box > .container > .option.child {
  padding-left: 20px;
}
/* Icons displayed to the left of the option's label. */
.ui-list-box > .container > .option > img {
  position: relative;
  top: 1px;
  left: 0px;
  width: 14px;
  height: 14px;
  padding-right: 2px;
}

/* Treat UIListBox options as buttons */
.ui-list-box.buttons { }
/**
 * When UIListBox options are treated as buttons, they have new behaviors, such
 * as displaying different background color when hovered over.
 */
.ui-list-box .button:hover {
  filter: invert(100%);
}
/**
 * Borderless list boxes are usually used in contexts where a UIListBox treats
 * its options as buttons.
 */
.ui-list-box.borderless {
  border: none;
}

/** Stack Views **/

/* Horizontal box: Left to right */

.hbox {
  display: flex;
  flex-direction: row;
  /* Constrains contents to be visible inside hbox. If element is larger
   * then hbox, it must specify that it can scroll. */
  overflow: hidden;
}
.hbox.align-top {
  align-items: flex-start;
}
.hbox.align-left {
  justify-content: flex-start;
}
.hbox.align-center {
  justify-content: center;
  align-items: center;
}
.hbox.align-right {
  justify-content: flex-end;
}
.hbox.align-bottom {
  align-items: flex-end;
}
.hbox.separated {
  justify-content: space-between;
}

/* Vertical box: Top to bottom */

.vbox {
  display: flex;
  flex-direction: column;
}
.vbox.align-left {
  justify-content: flex-start;
}
.vbox.align-center {
  justify-content: center;
  align-items: center;
}
.vbox.align-right {
  justify-content: flex-end;
}
.vbox.separated {
  justify-content: space-between;
}
.vbox.align-top {
  justify-content: flex-start;
}
.vbox.align-bottom {
  justify-content: flex-end;
}

.hbox.gap-5 {
  gap: 5px;
}
.hbox.gap-10 {
  gap: 10px;
}
.hbox.gap-20 {
  gap: 20px;
}
.vbox.gap-5 {
  gap: 5px;
}
.vbox.gap-10 {
  gap: 10px;
}
.vbox.gap-20 {
  gap: 20px;
}
/* Adds a one pixel separator between all elements */
.vbox.gap-separator {
  gap: 1px solid #000;
}

/*
 * Allow proportional size of views.
 *
 * This is an experimental keyword that is intended to make it easy for views to
 * transition from a desktop to mobile context w/o rework on the view.
 *
 * This also avoids the pitfalls of `size` declarations exceeding the size of the
 * container (which I have experienced in several contexts). This allows the box
 * model to appropriately size elements, depending on the container size, w/ no
 * risk of child elements causing visual defects.
 */
.hbox.ratio-1 {
  flex: 1;
}
.hbox.ratio-2 {
  flex: 2;
}
.hbox.ratio-3 {
  flex: 3;
}
.vbox.ratio-1 {
  flex: 1;
}
/* TODO: Trying to figure out how to autosize the `select`. I'm not sure it's possible. */
.vbox.ratio-2 {
  flex: 2;
}
.vbox.ratio-3 {
  flex: 3;
}

/** Add padding where boxes aren't possible. */

.add-5-above {
  margin-top: 5px;
}
.add-10-above {
  margin-top: 10px;
}
.add-20-above {
  margin-top: 20px;
}

.add-5 {
  margin-bottom: 5px;
}
.add-10 {
  margin-bottom: 10px;
}
.add-20 {
  margin-bottom: 20px;
}
/* ... */

